Styled some responsiveness and fixed some gaps

--- a/styling.css
+++ b/styling.css
@@ -36,6 +36,7 @@ h2 {
   text-align: center;
   margin: 15px 20px;
   text-transform: capitalize;
+  margin-bottom: 40px;
 }
 
 .tempToday {
@@ -48,22 +49,24 @@ h3 {
   font-weight: lighter;
   margin-left: 15px;
   margin-bottom: 10px;
-  color: #E7CFBC;
+  color: #FFF4EC;
 }
 
 h4 {
   text-align: right;
-  font-size: 18px;
+  font-size: 19px;
   font-weight: lighter;
   margin-right: 15px;
-  color: #E7CFBC;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  color: #FFF4EC;
 }
 
 h5 {
   text-align: center;
   align-items: flex-end;
   font-size: 20px;
-  color: #E7CFBC;
+  color: #846a6a;
   font-weight: lighter;
 }
 
@@ -74,6 +77,7 @@ h5 {
   justify-content: space-between;
   background: #b0c4de;
   text-align: center;
+  color: #846a6a;
   margin: inherit;
   border-bottom: 2px darkcyan solid;
 }
@@ -82,6 +86,7 @@ h5 {
   font-size: 20px;
   font-weight: lighter;
   padding: 10px;
+  color: #846a6a;
   text-transform: capitalize;
 }
 
@@ -97,5 +102,27 @@ h5 {
 .descriptionToday {
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 668px) {
+  .weather-five-days {
+    background-color: #846a6a;
+  }
+
+  .weekday-name {
+    color: #FFF4EC;
+  }
+
+  .day-temp {
+    color: #FFF4EC;
+  }
+
+  h3 {
+    color: darkcyan;
+  }
+
+  h5 {
+    color: darkcyan;
+  }
 }
 
